novos exemplos adicionados

--- a/Flask.ipynb
+++ b/Flask.ipynb
@@ -124,6 +124,33 @@
       "cell_type": "markdown",
       "source": [],
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from flask import Flask, request\n",
+        "\n",
+        "app = Flask(__name__)\n",
+        "\n",
+        "@app.route('/')\n",
+        "def hello_world():\n",
+        "    return ('<html><header><title>This is title</title></header>'\n",
+        "            '<body>Hello world</body></html>')\n",
+        "@app.route('/get')\n",
+        "def replicate():\n",
+        "    user_text = request.args.get('msg')\n",
+        "    return user_text.upper()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    app.run()"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
     }
   ],
   "metadata": {
