editado descrições de Flask.ipynb

--- a/Flask.ipynb
+++ b/Flask.ipynb
@@ -3,14 +3,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Projeto PAAS\n",
+        "# Machine Learning microservice tutorial\n",
         "\n",
-        "O intuito desta prova de conceito é realizar a disponibilização de um serviço de predição, de um modelo machine learning, através de um Web Service\n",
+        "## Utilizando o Flask para entregar modelos de Machine Learning em uma arquitetura de microserviços\n",
         "\n",
-        "O termo PAAS(prediction as a service) já é consolidado na comunidade de  Data Science, pois o mesmo é necessário para se obter previsões em tempo real.\n",
-        "\n",
-        "Para esta prova, irei começar tentando estabelecer um Web Service que disponibilizará um modelo de machine learning através da biblioteca Flask.\n",
-        "\nO Flask é uma biblioteca ideal, pois oferece a possibilidade da criação de microserviços com um esforço mínimo"
+        "O intuito desta prova de conceito é realizar a disponibilização de um serviço de predição, de um modelo machine learning,\n",
+        "através de um Web Service. O termo **PAAS(prediction as a service)** já é consolidado na comunidade de Data Science,\n",
+        "pois o mesmo é necessário para se obter previsões em tempo real.\n",
+        "\nPara esta prova, irei estabelecer um Web Service que disponibilizará um modelo de machine learning através da biblioteca Flask.O Flask é uma biblioteca ideal, pois oferece a possibilidade da criação de microserviços com um esforço mínimo."
       ],
       "metadata": {}
     },
